apache-hive.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
  name: minio
spec:
  containers:
  - name: minio
    image: minio/minio:latest
    command:
    - /bin/bash
    - -c
    args: 
    - minio server /data --console-address :9090

---
apiVersion: v1
kind: Service
metadata:
  name: metastore
spec:
  ports:
  - port: 9083
  selector:
    app: metastore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metastore
spec:
  selector:
    matchLabels:
      app: metastore
  template:
    metadata:
      labels:
        app: metastore
    spec:
      containers:
      - name: metastore
        image: apache/hive:4.0.0
        command:
        - /bin/bash
        - -c
        args: 
        - sleep 6000
        ports:
        - containerPort: 9083
        volumeMounts:
        - name: metastore-cfg-vol
          mountPath: /opt/hive-metastore/conf/metastore-site.xml
          subPath: metastore-site.xml
        - name: metastore-cfg-vol
          mountPath: /opt/hadoop/etc/hadoop/core-site.xml
          subPath: core-site.xml
        resources:
          requests:
            memory: "2G"
            cpu: 1
      volumes:
        - name: metastore-cfg-vol
          configMap:
            name: metastore-cfg
