mysql-hsvc.yaml
# podname.h-servicename.nm.svc.cluster.local
apiVersion: v1
kind: Service
metadata:
  name: mysql-h
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: mysql
